@@ -3,8 +3,6 @@ TODO
 1. Opravit testy.
 2. Dodelat pokryti testy.
 3. Dodelat dokumentaci v PYX::XMLNorm.
-4. Popremyslet, jestli neni lepsi nepouzivat globalni promenne v PYX::XMLNorm.
-   Neco jako XML::Parser.
 5. Resit PYX::XMLNorm s flush.
     Mam vstup:
     (xml
@@ -28,3 +26,6 @@ TODO
 
 Applied
 =======
+4. Popremyslet, jestli neni lepsi nepouzivat globalni promenne v PYX::XMLNorm.
+   Neco jako XML::Parser.
+OK [20150331] skim
